<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="user">Email</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="title">LOGIN</string>
    <string name="admin">ADMIN</string>
    <string name="img">image</string>
    <string name="userprofile">USER PROFILE</string>
    <string name="fname">Thimira</string>
    <string name="lname">Sobash</string>
    <string name="email">Thimi1234@gmail.com</string>
    <string name="password">*************</string>
    <string name="fname1">First Name</string>
    <string name="lname1">Last Name</string>
    <string name="email3">Email</string>
    <string name="password1">Password</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="title1">USER REGISTRATION</string>
    <string name="compass">Confirm Password</string>
    <string name="useredit">EDIT PROFILE</string>
    <string name="title2">Total Bill</string>
    <string name="img11">background image</string>
    <string name="img1">logo</string>
    <string name="order">Order Payment</string>
    <string name="delivery">Delivery Payment</string>
    <string name="total">Total Payment</string>
    <string name="order1">Rs.450.00</string>
    <string name="delivery1">Rs.150.00</string>
    <string name="total1">Rs.600.00</string>

    //IT19188164
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="loginAdmin">Login</string>
    <string name="userImage">image</string>
    <string name="passLogo">Image</string>
    <string name="adminIcon">image</string>
    <string name="searchP">Search Product</string>
    <string name="updateP">Update Product Details</string>
    <string name="btnAddP">Add Item</string>
    <string name="addImage">Image</string>
    <string name="addTopic">ADD PRODUCT</string>
    <string name="btnViewP">VIEW STORE</string>
    <string name="btnBrowse">BROWSE</string>

    //IT19101248
    <string name="t1">WELCOME</string>
    <string name="t2">fresh fruits and vegitables in your Doorsteps..</string>
    <string name="name">Enter your Name:</string>
    <string name="contact">Enter Your ID:</string>

    <string name="updatebtn">update</string>
    <string name="add">"add "</string>
    <string name="update">update</string>
    <string name="deletefeed">delete</string>
    <string name="view">viewbtn</string>
    <string name="show">view</string>
    <string name="feed">Enter your Feedback:</string>
    <string name="phone">Enter contact No:</string>
    <string name="id">Enter your ID</string>
    <string name="ID">Enter your ID:</string>
    <string name="fid">Enter your ID:</string>
    <string name="txtname2">Name:</string>
    <string name="txtid2">ID:</string>
    <string name="txtfeed2">Feedback:</string>
    <string name="btn1">update</string>
    <string name="btn2">delete</string>
    <string name="btn3">view</string>
    <string name="txtenter">Enter Your ID:</string>
    <string name="loadbtn">load</string>
    <string name="tname">Name</string>
    <string name="tid">ID</string>
    <string name="tfeed">Feedback</string>
    <string name="txname">Enter Your Name:</string>
    <string name="txfeedback">Enter Your Feedback:</string>
    <string name="btnup">update</string>
    <string name="btndelete">delete</string>
    <string name="upDel"><![CDATA[update & delete]]></string>

    //19158396
    //interface 1

    <string name="Interface1Topic">Your Delivery Details</string>
    <string name="Value1">Name</string>
    <string name="Value2">MobileNumber</string>
    <string name="Value3">Email</string>
    <string name="Value4">Address1</string>
    <string name="Value5">Address2</string>
    <string name="Value6">City</string>
    <string name="Value7">Date</string>

    //interface2
    <string name="Interface2">Check Your Details</string>

    //interface3
    <string name="interface3">Delivery Payment</string>
    <string name="Pay1">Charge For 1 KM</string>
    <string name="Pay2">Destination</string>
    <string name="Pay3">How many KM have?</string>
    <string name="charge">1000.00</string>
    <string name="Pay4">PIN Number</string>

    //interface4
    <string name="viewPay">Change Details</string>
    <string name="ViewPay1"> Destination :</string>
    <string name="ViewPay2"> No Of KM :</string>

    //interface5
    <string name="interface5">$ You Have To Pay !!</string>
    <string name="Charge1">Charge For 1 KM :</string>
    <string name="Total1Value">1000.00</string>
    <string name="Charge2">Number Of KM :</string>
    <string name="Total_Km_Value">15</string>
    <string name="Charge3">Total Charge For Delivery :</string>
    <string name="Fee">15000.00</string>
    <string name="Warning">Please Pay Your Charge !!!</string>
    <string name="thank">Thank You For Your Trust In Us !!!</string>
    <string name="button_final">PAY</string>
    <string name="NoOfKm2">10</string>
    <string name="TotalCharge2">10000.00</string>

</resources>