<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img"
        android:scaleType="fitXY"
        android:src="@drawable/carrot1"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="73dp" />

    <Button
        android:id="@+id/login"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="158dp"
        android:layout_height="64dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user"
        android:inputType="textPersonName"
        android:shadowColor="#FFFFFF"
        android:textColor="#FAF9F9"
        android:textColorHint="#FAF9F9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.445" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="#FAF9F9"
        android:textColorHint="#FAF9F9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <Button
        android:id="@+id/editOK"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="193dp"
        android:layout_height="60dp"
        android:text="@string/register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.318" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="181dp"
        android:layout_height="99dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/bigbucket" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Light.Button.Inset"
        android:layout_width="114dp"
        android:layout_height="65dp"
        android:text="@string/admin"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOK"
        app:layout_constraintVertical_bias="0.867" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="89dp"
        android:layout_height="35dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#0C0C0C"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.447" />


</androidx.constraintlayout.widget.ConstraintLayout>