<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginPage"
    android:background="@drawable/mix">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="54dp"
        android:layout_height="57dp"
        android:layout_marginStart="28dp"
        android:clickable="true"
        app:backgroundTint="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:maxImageSize="@android:dimen/notification_large_icon_height"
        app:srcCompat="@drawable/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="146dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorBrown">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:background="@drawable/bigbucket"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="bigBasket"
            android:textColor="@color/colorBlack"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

    </LinearLayout>


    <EditText
        android:id="@+id/etUName"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:background="@color/colorLightBrown"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enter_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorBlack"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="213dp"
        android:layout_height="59dp"
        android:background="@color/colorLightBrown"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.685"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUName"
        app:layout_constraintVertical_bias="0.064" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="111dp"
        android:layout_height="63dp"
        android:background="@color/colorAsh"
        android:text="@string/loginAdmin"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.387" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:contentDescription="@string/userImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etUName"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@drawable/username" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="59dp"
        android:contentDescription="@string/passLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/password" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="123dp"
        android:layout_height="106dp"
        android:contentDescription="@string/adminIcon"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        app:srcCompat="@drawable/admin" />

</androidx.constraintlayout.widget.ConstraintLayout>